--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "feather-icons": "^4.7.3",
     "gh-pages": "^1.2.0",
     "moment": "^2.22.2",
+    "node-forge": "^0.10.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-feather": "^1.1.3",
